--- a/app/views/application/_filter_widget.html.erb
+++ b/app/views/application/_filter_widget.html.erb
@@ -18,7 +18,7 @@
     </div>
 
     <div class="col s1">
-      <%= link_to "Reset Filters", reset_filterrific_url, class: "waves-effect waves-light btn filter" %>
+      <%= link_to "Reset", reset_filterrific_url, class: "waves-effect waves-light btn-flat #{@shop.color} white-text" %>
     </div>
     <div class="col s1">
       <%= render_filterrific_spinner %>
