--- a/app/views/carts/_order_items_form.html.erb
+++ b/app/views/carts/_order_items_form.html.erb
@@ -19,11 +19,11 @@
     <% total_amount += product.price.to_i * i.object.quantity %>
     <div id="" class="order_item_list_entry_<%= product.id %> border-wrap-grey-small product-box">
       <div class="row wishproduct-box">
-        <%= link_to product_path(product) do %>
-          <%= image_tag product.product_image_links.first.link_name, class: 'col l2' %>
+        <%= link_to product_path(@shop.url,product) do %>
+          <%= image_tag(product.image || '', class: 'col l2')%>
           <div class="col l4">
             <span class="bigger-font"><%= product.name %></span>
-            <span> - <%= product.category.name %></span>
+            <span> - <%= (product.category.name if product.category) %></span>
           </div>
         <% end %>
         <div class="col l2"><%= product.price %></div>
@@ -33,7 +33,7 @@
           <%= link_to "Update", "#", class: "update-quantity-link", "data-product-id" => product.id %>
         </div>
         <div class="col l2 center-align">&#8358;<%= product.price.to_i * i.object.quantity.to_i %></div>
-        <%= link_to delete_order_item_path(product.id), remote: true, title: "Delete", class: "row red-color-text col l1 delete-from-cart" do %>
+        <%= link_to delete_order_item_path(@shop.url, product.id), remote: true, title: "Delete", class: "row red-color-text col l1 delete-from-cart" do %>
           <i class="small material-icons col l1 ">delete</i>
         <% end %>
       </div>
@@ -52,6 +52,6 @@
   </div>
   <div class="clearfix order-checkout-btn-div">
     <%= link_to "EMPTY CART", empty_cart_path, class: "btn text-darken-4 empty-cart-btn left", remote: true %>
-    <%= f.submit "Checkout", class: "btn gen-green-background right" %>
+    <%= f.submit "Checkout", class: "btn-flat waves-effect waves-light right #{@shop.color} white-text" %>
   </div>
 <% end %>
