--- a/app/views/landing/contact.html.erb
+++ b/app/views/landing/contact.html.erb
@@ -34,7 +34,7 @@
 	    	</div>
 	    </div>
 	    <div class="row container pad-bottom">
-	    	<button class="btn waves-effect right gen-green-background">SEND</button>
+	    	<button class="btn-flat waves-effect right <%= @shop.color %> white-text">SEND</button>
 	    </div>
 	<% end %>
 </div>
