--- a/app/views/orders/_address_form.html.erb
+++ b/app/views/orders/_address_form.html.erb
@@ -48,7 +48,7 @@
 
   <div class="row">
     <div class="col m12">
-      <%= submit_tag "Save and Continue", class: "btn btn-flat full-submit" %>
+      <%= submit_tag "Save and Continue", class: "btn btn-flat full-submit #{@shop.color}" %>
     </div>
   </div>
   <% end %>
