--- a/app/views/orders/_old_addresses.html.erb
+++ b/app/views/orders/_old_addresses.html.erb
@@ -24,7 +24,7 @@
       </div>
       <div class="address-display">
         <%= hidden_field_tag :address_id, address.id %>
-        <%= submit_tag "Use this address", class: "btn btn-flat full-submit" %>
+        <%= submit_tag "Use this address", class: "btn btn-flat full-submit #{@shop.color} white-text" %>
         <% end %>
       </div>
     </div>
