--- a/app/views/orders/_paypal.html.erb
+++ b/app/views/orders/_paypal.html.erb
@@ -16,5 +16,5 @@
 
 <div>
   <br>
-  <%= button_to "Proceed to Paypal", post_payment_orders_path(type: "paypal"), class: "btn right" %>
+  <%= button_to "Proceed to Paypal", post_payment_orders_path(type: "paypal"), class: "btn right #{@shop.color} white-text" %>
 </div>
