--- a/app/views/orders/address.html.erb
+++ b/app/views/orders/address.html.erb
@@ -2,7 +2,7 @@
 <div class="contain">
   <%= check_address_exist %>
   <div class="new-form-button">
-    <button id="opener" class="btn btn-flat">Create a New Address</button>
+    <button id="opener" class="btn btn-flat <%= @shop.color %> white-text">Create a New Address</button>
   </div>
   </div>
   <div id="new-address" class="modal">
