--- a/app/views/orders/summary.html.erb
+++ b/app/views/orders/summary.html.erb
@@ -71,7 +71,7 @@
 
     <div class="clearfix valign-wrapper right">
       Total <div class="total-amount-div bold">&#8358; <%= total_amount %></div>
-      <%= button_to "Proceed to Payment", payment_orders_path, class: "btn" %>
+      <%= button_to "Proceed to Payment", payment_orders_path, class: "btn #{@shop.color} white-text btn-flat" %>
     </div>
     <div class="clearfix"></div>
 
