--- a/app/views/users/account.html.erb
+++ b/app/views/users/account.html.erb
@@ -51,7 +51,7 @@
                 <div class="row">
                   <div class="col s12">
                     <%= link_to edit_user_path(current_user) do %>
-                    <button class="btn waves-effect b-width"><i class="fa fa-pencil-square-o my-icon"></i><span class="b-text">Edit</span></button> 
+                    <button class="btn waves-effect b-width <%= @shop.color %>"><i class="fa fa-pencil-square-o my-icon"></i><span class="b-text">Edit</span></button> 
                     <% end %>
                   </div>
                 </div>
