--- a/app/views/application/_category_dropdown.html.erb
+++ b/app/views/application/_category_dropdown.html.erb
@@ -1,22 +1,14 @@
 <ul id="category-dropdown" class="nav-link-items">
   <% @menu_categories.each do |category| %>
-    <li class= "col l3 cat"><a href="#" class="black-text"><%= link_to category.name, category_path(category), class: "black-text" %></a>
-      <div class="row">
-        <ul class="cat ul">
-          <li><img src= "<%= category.products.first.product_image_links.first.
-              link_name%>" height="150" width="150">
-          </li>
-        </ul>
-      </div>
+    <li class= "col l3 cat" style="margin: 10px 0">
+      <%= link_to category.name, category_path(category), class: "black-text upcase" %>
       <div class="display-products">
       <% category.subcategories.limit(4).each do |subcategory| %>
         <ul>
           <div class="row">
-            <div class="col l1">&nbsp;</div>
-              <li class="col l10">
-                <%= link_to subcategory.name, subcategory_path( category.id, subcategory.id ) %>
+              <li class="col s10 offset-s1 center-align">
+                <%= link_to subcategory.name, subcategory_path(category.id, subcategory.id ), class: "center-align #{@shop.color}-text" %>
               </li>
-            <div class="col l1">&nbsp;</div>
           </div>
         </ul>
         <% end %>
