--- a/app/views/shops/show.html.erb
+++ b/app/views/shops/show.html.erb
@@ -1,7 +1,7 @@
 <div class="dashboard-body">
   <div class="row">
     <div class="welcome-note-cont center">
-      <h4><%= current_shop_owner.shop.name %></h4> 
+      <h4><%= current_shop_owner.shop.name %></h4>
       <p>
         <a href=<%= "#{root_url}#{current_shop_owner.shop.url}"%>>
           <%= "#{root_url}#{current_shop_owner.shop.url}" %>
@@ -17,12 +17,12 @@
       </div>
     </div>
 
-    <div class="row btm-divider">     
+    <div class="row btm-divider">
       <div class="steps">
-        <p class="left">1</p>
+        <p class="left <%= @shop.color %>">1</p>
         <div class="left steps-description">
           <div class="steps-title">
-            <a href="<%= shop_products_path %>">Add your products</a>
+            <a href="<%= shop_products_path %>" class="<%= @shop.color %>-text">Add your products</a>
           </div>
           <div class="steps-detail">Add product and upload their pictures from the <a href="<%= shop_products_path %>">Products section.</a>
           </div>
@@ -30,50 +30,50 @@
       </div>
     </div>
 
-    <div class="row btm-divider">      
+    <div class="row btm-divider">
       <div class="steps">
-        <p class="left">2</p>
+        <p class="left <%= @shop.color %>">2</p>
         <div class="left steps-description">
           <div class="steps-title">
-            <a href="#">Set up delivery rates</a>
+            <a href="#" class="<%= @shop.color %>-text">Set up delivery rates</a>
           </div>
           <div class="steps-detail">You can setup your delivery charges from the <a href="#">Orders</a> section.</div>
         </div>
       </div>
     </div>
 
-    <div class="row btm-divider">      
+    <div class="row btm-divider">
       <div class="steps">
-        <p class="left">3</p>
+        <p class="left <%= @shop.color %>">3</p>
         <div class="left steps-description">
           <div class="steps-title">
-            <a href="#">Set up payment methods</a>
+            <a href="#" class="<%= @shop.color %>-text">Set up payment methods</a>
           </div>
-          <div class="steps-detail"><a href="#">Activate</a> the payment options you want to accept on your store.</div>
+          <div class="steps-detail"><a href="#" class="<%= @shop.color %>-text">Activate</a> the payment options you want to accept on your store.</div>
         </div>
       </div>
     </div>
 
-    <div class="row btm-divider">    
+    <div class="row btm-divider">
       <div class="steps">
-        <p class="left">4</p>
+        <p class="left <%= @shop.color %>">4</p>
         <div class="left steps-description">
           <div class="steps-title">
-            <a href="#">Add Coupons</a>
+            <a href="#" class="<%= @shop.color %>-text">Add Coupons</a>
           </div>
-          <div class="steps-detail">Add <a href="#">coupons</a> to drive sales and attract customers.</div>
+          <div class="steps-detail">Add <a href="#" class="<%= @shop.color %>-text">coupons</a> to drive sales and attract customers.</div>
         </div>
       </div>
     </div>
 
-    <div class="row btm-divider">    
+    <div class="row btm-divider">
       <div class="steps">
-        <p class="left">5</p>
+        <p class="left <%= @shop.color %>">5</p>
         <div class="left steps-description">
           <div class="steps-title">
-            <a href="<%= current_shop_owner.shop.url %>">Go live and start accepting orders</a>
+            <a href="<%= current_shop_owner.shop.url %>" class="<%= @shop.color %>-text">Go live and start accepting orders</a>
           </div>
-          <div class="steps-detail"><a href="<%= current_shop_owner.shop.url %>">View your shop.</a> You can start accepting orders immediately.</div>
+          <div class="steps-detail"><a target="_blank" href="/<%= @shop.url %>" class="<%= @shop.color %>-text">View your shop.</a> You can start accepting orders immediately.</div>
         </div>
       </div>
     </div>
