--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -16,6 +16,7 @@ $grey-border: #efefef;
 $bottom-border: #e8e8e8;
 $section-color: #333;
 $gm-font-m: 23px;
+$gm-font-sm: 1rem;
 $section-title-size: 600;
 $section-text-size: 400;
 $section-button-size: 500;
