--- a/app/views/shops/_product.html.erb
+++ b/app/views/shops/_product.html.erb
@@ -1,30 +1,52 @@
 <% if products.any? %>
-  <div class="strike">
-    <span><%= pluralize(products.count, "Product")%> Available in Store</span>
+
+  <div class="row">
+    <h3 class="center-align edit-form-heading">Shop Products (<%= products.count %>)</h3>
+    <div class="input-field col s4 offset-s8 product-search">
+      <i class="material-icons prefix">search</i>
+      <input id="icon-prefix" type="text" class="validate">
+      <label for="icon-prefix">Search Products...</label>
+    </div>
   </div>
+
+  
 
   <div class="row">
     <% products.each do |product| %>
       <div class="col s4 m3 l3 hspace" id='<%= "product#{product.id}" %>'>
-        <div class="card hoverable" id="products-card">
-          <div class="card-image">
+        <div class="card products-card hoverable" id="products-card">
+          <div class="card-image waves-effect waves-block waves-light">
             <%= image_tag product.image.preview.url, class: "activator"%>
-            <span class="card-title"><%= product.name %></span>
           </div>
           <div class="card-content">
-            <p><%= product.description %></p>
-          </div>
-          <div class="card-action">
-            <div class ="action-right">
-              <a class="btn-floating green tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Product"  href="<%= edit_shop_product_path(product) %>" ><i class="material-icons">mode_edit</i></a>
-              <a class="btn-floating red tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Product" onclick="confirmDeleteProduct('<%= product.id %>')" id="delete_product"><i class="material-icons">delete</i></a>
-            </div>
+            <span class="card-title activator grey-text text-darken-4"><%= product.name %> <a class="btn-floating"><i class="material-icons">visibility</i></a></span>
+            <p><h5>$<%= product.price %></h5> <span class="text-darken-3 grey-text">for 10 inches</span></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"><%= product.name %><i class="material-icons right">close</i></span>
-            <blockquote> <%= product.description %> </blockquote>
-            <p> <span>Prize</span>: <%= product.price %> </p>
-            <p> <span>Brand</span>: <%= product.brand %> </p>
+            <div class="reveal-content">
+              <blockquote>
+                <%= product.description %>
+              </blockquote>
+              <div class="section">
+                <span class="text-darken-7">Price:</span>
+                <h6><%= product.price%></h6>
+              </div>
+              <div class="section">
+                <span class="text-darken-7">Size:</span>
+                <h6><%= product.price %> inches</h6>
+              </div>
+              
+              <div class="section">
+                <span class="text-darken-7">Brand:</span>
+                <h6><%= product.brand %></h6>
+              </div>
+              
+            </div>
+           <div class="card-action">
+             <a class="waves-effect waves-light btn left" href="<%= edit_shop_product_path(product) %>">Edit</a>
+             <a class="waves-effect waves-light btn right red" onclick="confirmDeleteProduct('<%= product.id %>')" id="delete_product">Delete</a>
+           </div>
           </div>
         </div>
       </div>
