--- a/app/views/layouts/dashboard_layout.html.erb
+++ b/app/views/layouts/dashboard_layout.html.erb
@@ -80,7 +80,7 @@
             </div>
 
             <div class="side-bar-menu">
-              <a href="#" class="side-bar-link">
+              <a href="/shopowners/admin/shop/orders" class="side-bar-link">
                 <span class="side-bar-menu-icon">
                   <i class="material-icons">shop</i>
                 </span>
