--- a/app/views/shops/_product.html.erb
+++ b/app/views/shops/_product.html.erb
@@ -20,7 +20,7 @@
           </div>
           <div class="card-content">
             <span class="card-title activator grey-text text-darken-4"><%= product.name %> <a class="btn-floating"><i class="material-icons">visibility</i></a></span>
-            <p><h5>$<%= product.price %></h5> <span class="text-darken-3 grey-text">for 10 inches</span></p>
+            <p><h5><span>&#8358;</span><%= product.price %></h5> <span class="text-darken-3 grey-text">for <%= product.size %> inches</span></p>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4"><%= product.name %><i class="material-icons right">close</i></span>
@@ -30,11 +30,11 @@
               </blockquote>
               <div class="section">
                 <span class="text-darken-7">Price:</span>
-                <h6><%= product.price%></h6>
+                <h6><span>&#8358;</span><%= product.price%></h6>
               </div>
               <div class="section">
                 <span class="text-darken-7">Size:</span>
-                <h6><%= product.price %> inches</h6>
+                <h6><%= product.size %> inches</h6>
               </div>
               
               <div class="section">
