Fix: resolves circleci issues

--- a/app/assets/stylesheets/landing.scss
+++ b/app/assets/stylesheets/landing.scss
@@ -387,8 +387,7 @@ nav {
   padding-top: 6px;
   position: relative !important;
 
-  .fa-shopping-bag,
-  a {
+  .fa-shopping-bag, a {
     color: $light-teal;
   }
 }
